--- a/SingularityUI/app/views/templates/requestsActiveBody.hbs
+++ b/SingularityUI/app/views/templates/requestsActiveBody.hbs
@@ -1,7 +1,8 @@
+{{#unless rowsOnly}}
 <section>
     <div class="row-fluid">
         <div class="span12">
-            {{#if requests.length}}
+            {{#if haveRequests}}
                 <table class="table" data-sortable>
                     <thead>
                         <tr>
@@ -22,6 +23,8 @@
                         </tr>
                     </thead>
                     <tbody>
+            {{/if}}
+{{/unless}}
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}" {{#ifFilteredRequest this ../searchFilter}}class="filtered"{{/ifFilteredRequest}}>
                                 <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
@@ -49,6 +52,8 @@
                                 </td>
                             </tr>
                         {{/eachWithFn}}
+{{#unless rowsOnly}}
+            {{#if haveRequests}}
                     </tbody>
                 </table>
             {{else}}
@@ -61,3 +66,4 @@
         </div>
     </div>
 </section>
+{{/unless}}
