--- a/SingularityUI/app/views/templates/requestsCooldownBody.hbs
+++ b/SingularityUI/app/views/templates/requestsCooldownBody.hbs
@@ -1,7 +1,8 @@
+{{#unless rowsOnly}}
 <section>
     <div class="row-fluid">
         <div class="span12">
-            {{#if requests.length}}
+            {{#if haveRequests}}
                 <table class="table" data-sortable>
                     <thead>
                         <tr>
@@ -20,6 +21,8 @@
                         </tr>
                     </thead>
                     <tbody>
+            {{/if}}
+{{/unless}}
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
@@ -45,6 +48,8 @@
                                 </td>
                             </tr>
                         {{/eachWithFn}}
+{{#unless rowsOnly}}
+            {{#if haveRequests}}
                     </tbody>
                 </table>
             {{else}}
@@ -57,3 +62,4 @@
         </div>
     </div>
 </section>
+{{/unless}}
