--- a/SingularityUI/app/views/templates/requestsPausedBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPausedBody.hbs
@@ -1,10 +1,11 @@
+{{#unless rowsOnly}}
 <section>
     <div class="page-header">
         <h1>Paused</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
-            {{#if requests.length}}
+            {{#if haveRequests}}
                 <table class="table" data-sortable>
                     <thead>
                         <tr>
@@ -23,6 +24,8 @@
                         </tr>
                     </thead>
                     <tbody>
+            {{/if}}
+{{/unless}}
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
                                 <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
@@ -43,6 +46,8 @@
                                 </td>
                             </tr>
                         {{/eachWithFn}}
+{{#unless rowsOnly}}
+            {{#if haveRequests}}
                     </tbody>
                 </table>
             {{else}}
@@ -55,3 +60,4 @@
         </div>
     </div>
 </section>
+{{/unless}}
