Made table fixed

--- a/SingularityUI/app/views/templates/requestsBase.hbs
+++ b/SingularityUI/app/views/templates/requestsBase.hbs
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row-fluid">
-        <div data-requests-body-container class="span12">
+        <div data-requests-body-container class="span12 table-staged">
             {{> requestsBody}}
         </div>
     </div>
