--- a/SingularityUI/app/views/templates/requestsCleaningBody.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaningBody.hbs
@@ -3,10 +3,10 @@
         <table class="table" data-sortable>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th class="visible-desktop">User</th>
-                    <th class="hidden-phone">Timestamp</th>
-                    <th class="visible-desktop">Cleaning Type</th>
+                    <th data-sort-attribute="id">ID</th>
+                    <th data-sort-attribute="user" class="visible-desktop">User</th>
+                    <th data-sort-attribute="timestamp" class="hidden-phone">Timestamp</th>
+                    <th data-sort-attribute="cleanupType" class="visible-desktop">Cleaning Type</th>
                 </tr>
             </thead>
             <tbody>
