--- a/SingularityUI/app/views/templates/requestsPendingBody.hbs
+++ b/SingularityUI/app/views/templates/requestsPendingBody.hbs
@@ -3,8 +3,8 @@
         <table class="table" data-sortable>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Pending Type</th>
+                    <th data-sort-attribute="id">ID</th>
+                    <th data-sort-attribute="pendingType">Pending Type</th>
                 </tr>
             </thead>
             <tbody>
