--- a/SingularityUI/app/styles/requestTable.styl
+++ b/SingularityUI/app/styles/requestTable.styl
@@ -4,3 +4,10 @@
 		margin-right 20px
 		padding-right 20px
 		border-right 1px dashed #ccc
+
+.table-staged
+
+	tbody
+
+		.centered
+			text-align center
