--- a/SingularityUI/app/views/templates/requestsAllBody.hbs
+++ b/SingularityUI/app/views/templates/requestsAllBody.hbs
@@ -31,7 +31,7 @@
                                 <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td class="visible-large-desktop">{{ displayState }}</td>
-                                <td class="visible-large-desktop">{{ instances }}</td>
+                                <td class="visible-large-desktop centered">{{ instances }}</td>
                                 <td class="visible-large-desktop">{{ deployId }}</td>
                                 <td class="visible-large-desktop">{{ deployUser }}</td>
                                 <td class="hidden-phone" data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHumanShort }}</span></td>
