--- a/SingularityService/src/main/resources/com/hubspot/singularity/views/index.mustache
+++ b/SingularityService/src/main/resources/com/hubspot/singularity/views/index.mustache
@@ -1,67 +1,1 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en">        <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en">               <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Singularity</title>
-    <link rel="shortcut icon" href="{{{staticRoot}}}/images/favicon.ico" />
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="{{{staticRoot}}}/css/app.css">
-    <script>
-        window.config = {
-            appRoot: "{{{appRoot}}}",
-            apiRoot: localStorage.getItem("apiRoot") || "{{{apiRoot}}}",
-            mesosLogPort: {{{mesosLogsPort}}},
-            {{#mesosLogsPortHttps}}
-            mesosLogsPortHttps: {{{mesosLogsPortHttps}}}
-            {{/mesosLogsPortHttps}}
-        };
-    </script>
-    <script src="{{{staticRoot}}}/js/vendor.js"></script>
-    <script src="{{{staticRoot}}}/js/app.js"></script>
-    <script>require('initialize');</script>
-</head>
-<body>
-    <div class="page-loader fixed"></div>
-    <div id="top-level-nav" class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="brand" href="">Singularity</a>
-                <div class="nav-collapse collapse">
-                    <ul class="nav">
-                        <li><a data-invoke-global-search><span class="icon icon-search hidden-phone"></span> <span class="hidden-phone icon-search-adjacent-text">Search</span><span class="visible-phone">Search</span></a></li>
-                        <li><a data-href="">Dashboard</a></li>
-                        <li><a data-href="status">Status</a></li>
-                        <li><a data-href="requests">Requests</a></li>
-                        <li><a data-href="tasks">Tasks</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a data-href="racks">Racks</a></li>
-                                <li><a data-href="slaves">Slaves</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="global-search" data-close-global-search>
-        <a data-close-global-search class="global-search-close">&times;</a>
-        <div class="global-search-input-wrapper">
-            <p class="global-search-tip ui-tip">Tip: You can press <code>t</code> to open this search and <code>esc</code> to close it.</p>
-            <input type="search" placeholder="Search all requests..." required />
-        </div>
-    </div>
-    <div id="page" class="container"></div>
-    <div style="-webkit-transform: translateZ(0)"></div>
-</body>
-</html>
+../../../../../../../../SingularityUI/app/assets/_index.mustache
