--- a/SingularityUI/app/views/templates/slaves.hbs
+++ b/SingularityUI/app/views/templates/slaves.hbs
@@ -15,16 +15,20 @@
                             <th>ID</th>
                             <th>Rack</th>
                             <th>Host</th>
-                            <th>State</th>
+                            <th>Uptime</th>
+                            <th data-sortable="false"></th>
                         </tr>
                     </thead>
                     <tbody>
                         {{#eachWithFn slavesActive}}
                             <tr>
-                                <td>{{ id }}</td>
+                                <td>
+                                    <a href="{{#appRoot}}{{/appRoot}}/tasks/active/{{ host }}">{{ id }}</a>
+                                </td>
                                 <td>{{ rackId }}</td>
                                 <td>{{ host }}</td>
-                                <td>{{ state }}</td>
+                                <td data-value="{{ firstSeenAt }}">{{ uptimeHuman }}</td>
+                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="decommission">Decommission</a></td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
@@ -53,7 +57,7 @@
                             <th>ID</th>
                             <th>Rack</th>
                             <th>Host</th>
-                            <th>State</th>
+                            <th>Died</th>
                             <th data-sortable="false"></th>
                         </tr>
                     </thead>
@@ -63,8 +67,8 @@
                                 <td>{{ id }}</td>
                                 <td>{{ rackId }}</td>
                                 <td>{{ host }}</td>
-                                <td>{{ state }}</td>
-                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-collection="slavesDead">Remove</a>
+                                <td data-value="{{ deadAt }}">{{ deadAtHuman }}</td>
+                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">Remove</a>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
@@ -94,6 +98,8 @@
                             <th>Rack</th>
                             <th>Host</th>
                             <th>State</th>
+                            <th>Triggered by</th>
+                            <th>Started</th>
                             <th data-sortable="false"></th>
                         </tr>
                     </thead>
@@ -104,7 +110,9 @@
                                 <td>{{ rackId }}</td>
                                 <td>{{ host }}</td>
                                 <td>{{ state }}</td>
-                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-collection="slavesDecomissioning">Remove</a>
+                                <td>{{ decomissioningBy }}</td>
+                                <td>{{ decomissioningAtHuman }}</td>
+                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">Activate | Remove</a>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
