--- a/SingularityUI/app/views/templates/slaves.hbs
+++ b/SingularityUI/app/views/templates/slaves.hbs
@@ -100,6 +100,7 @@
                             <th>State</th>
                             <th>Triggered by</th>
                             <th>Started</th>
+                            <th>Uptime</th>
                             <th data-sortable="false"></th>
                         </tr>
                     </thead>
@@ -112,7 +113,8 @@
                                 <td>{{ state }}</td>
                                 <td>{{ decomissioningBy }}</td>
                                 <td>{{ decomissioningAtHuman }}</td>
-                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">Activate | Remove</a>
+                                <td>{{ uptimeHuman }}</td>
+                                <td class="actions-column"><a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">Reactivate | Remove</a>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
