--- a/SingularityUI/app/views/templates/vex/serverRemoveDecomissioned.hbs
+++ b/SingularityUI/app/views/templates/vex/serverRemoveDecomissioned.hbs
@@ -5,5 +5,5 @@
 <pre>{{ id }}</pre>
 
 <p>
-	If the {{ type }} has not been cleaned up by Zookeeper, this will make it active again.
+	Removing a decommissioned {{ type }} will cause that slave to become active again if the mesos-slave process is still running.
 </p>
