Fixed up searching & filtering

--- a/SingularityUI/app/views/templates/tasksActiveBody.hbs
+++ b/SingularityUI/app/views/templates/tasksActiveBody.hbs
@@ -7,8 +7,8 @@
                     <th data-sort-attribute="startedAt" class="hidden-phone">Started</th>
                     <th data-sort-attribute="host" class="visible-desktop">Host</th>
                     <th data-sort-attribute="rack" class="visible-desktop">Rack</th>
-                    <th data-sort-attribute="resources.cpus" class="visible-large-desktop">CPUs</th>
-                    <th data-sort-attribute="resources.memoryMb" class="visible-large-desktop">Memory</th>
+                    <th data-sort-attribute="cpus" class="visible-large-desktop">CPUs</th>
+                    <th data-sort-attribute="memoryMb" class="visible-large-desktop">Memory</th>
                     <th class="hidden-phone"></th>
                 </tr>
             </thead>
