Fecking scroll bar

--- a/SingularityUI/app/styles/requestTable.styl
+++ b/SingularityUI/app/styles/requestTable.styl
@@ -1,19 +1,19 @@
 #table-nav-pills
-	
-	#paused-pill
-		margin-right 20px
-		padding-right 20px
-		border-right 1px dashed #ccc
+    
+    #paused-pill
+        margin-right 20px
+        padding-right 20px
+        border-right 1px dashed #ccc
 
 .table-staged
 
-	tbody
+    tbody
 
-		.centered
-			text-align center
+        .centered
+            text-align center
 
-		td
-			overflow-x hidden
+        td
+            overflow hidden
 
-			&:hover
-				overflow-x visible
+            &:hover
+                overflow-x visible
