--- a/SingularityUI/app/views/templates/nav.hbs
+++ b/SingularityUI/app/views/templates/nav.hbs
@@ -6,19 +6,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="">Singularity</a>
+            <a class="brand" href="{{#appRoot}}{{/appRoot}}/">Singularity</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a data-invoke-global-search><span class="icon icon-search hidden-phone"></span> <span class="hidden-phone icon-search-adjacent-text">Search</span><span class="visible-phone">Search</span></a></li>
-                    <li><a data-href="">Dashboard</a></li>
-                    <li><a data-href="status">Status</a></li>
-                    <li><a data-href="requests">Requests</a></li>
-                    <li><a data-href="tasks">Tasks</a></li>
+                    <li {{#ifEqual fragment ""}}class="active"{{/ifEqual}}>
+                        <a href="{{#appRoot}}{{/appRoot}}/">Dashboard</a>
+                    </li>
+                    <li {{#ifEqual fragment "status"}}class="active"{{/ifEqual}}>
+                        <a href="{{#appRoot}}{{/appRoot}}/status">Status</a>
+                    </li>
+                    <li {{#ifEqual fragment "requests"}}class="active"{{/ifEqual}}>
+                        <a href="{{#appRoot}}{{/appRoot}}/requests">Requests</a>
+                    </li>
+                    <li {{#ifEqual fragment "tasks"}}class="active"{{/ifEqual}}>
+                        <a href="{{#appRoot}}{{/appRoot}}/tasks">Tasks</a>
+                    </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a data-href="racks">Racks</a></li>
-                            <li><a data-href="slaves">Slaves</a></li>
+                            <li><a href="{{#appRoot}}{{/appRoot}}/racks">Racks</a></li>
+                            <li><a href="{{#appRoot}}{{/appRoot}}/slaves">Slaves</a></li>
                         </ul>
                     </li>
                 </ul>
