Moved Task killing to model

--- a/SingularityUI/app/views/templates/vex/taskKill.hbs
+++ b/SingularityUI/app/views/templates/vex/taskKill.hbs
@@ -1,5 +1,5 @@
 <p>Are you sure you want to kill this task?</p>
-<pre>{{ taskId }}</pre>
+<pre>{{ id }}</pre>
 <p>
     Long running process will be started again instantly, scheduled
     tasks will behave as if the task failed and may be rescheduled
