--- a/SingularityUI/app/views/templates/requestsAllBody.hbs
+++ b/SingularityUI/app/views/templates/requestsAllBody.hbs
@@ -6,7 +6,7 @@
                 <table class="table" data-sortable>
                     <thead>
                         <tr>
-                            <th></th>
+                            <th class="star-column"></th>
                             <th data-sort-attribute="name">Name</th>
                             <th data-sort-attribute="state">State</th>
                             <th data-sort-attribute="instances" class="visible-large-desktop">Instances</th>
@@ -28,7 +28,7 @@
 {{/unless}}
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}" {{#ifFilteredRequest this ../searchFilter}}class="filtered"{{/ifFilteredRequest}}>
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
+                                <td class="star-column"><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="{{#appRoot}}{{/appRoot}}/request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td class="visible-large-desktop">{{ displayState }}</td>
                                 <td class="visible-large-desktop centered">{{ instances }}</td>
