Task view refactor

--- a/SingularityUI/app/views/templates/taskOverview.hbs
+++ b/SingularityUI/app/views/templates/taskOverview.hbs
@@ -1,12 +1,20 @@
+{{! Part of taskBase }}
 <header class="jumbotron subhead" id="overview">
-    <h3><a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}">{{#hardBreak request.id}}{{/hardBreak}}</a></h3>
-    <h1 data-string-length-tens="{{ taskIdStringLengthTens }}">
-        {{#hardBreak taskHistory.task.id}}{{/hardBreak}}
+    {{#with taskHistory.task.taskRequest}}
+        <h3>
+            Request
+            <a href="{{#appRoot}}{{/appRoot}}/request/{{ request.id }}">
+                {{ request.id }}
+            </a>
+        </h3>
+    {{/with}}
+    <h1>
+        {{ taskHistory.task.id }}
         <div class="header-actions">
             <a data-task-id="{{ taskHistory.task.id }}" data-action="viewObjectJSON">JSON</a>
-            {{#if taskHistory.task.isStopped}}{{else}}
+            {{#unless taskHistory.task.isStopped}}
                 <a data-task-id="{{ taskHistory.task.id }}" data-action="remove">Kill task</a>
-            {{/if}}
+            {{/unless}}
         </div>
     </h1>
     {{#if taskHistory.taskUpdates}}
@@ -16,7 +24,7 @@
                     {{ taskStateHuman }} as of
                     {{ timestampHuman }}
                     {{#if statusMessage}}
-                        ({{ statusMessage }})
+                        &mdash; {{ statusMessage }}
                     {{/if}}
                 </p>
             {{/if}}
