Updated definition list aesthetics

--- a/SingularityUI/app/views/templates/taskBase.hbs
+++ b/SingularityUI/app/views/templates/taskBase.hbs
@@ -14,11 +14,15 @@
         </section>
     </div>
 
+    <div class='task-info-container'>
+        
+    </div>
+
     <div class='task-resource-container'>
         
     </div>
 
-    <div class='task-env-container'>
+    <div class='task-environment-container'>
         
     </div>
 </div>
