--- a/SingularityUI/app/styles/definitionList.styl
+++ b/SingularityUI/app/styles/definitionList.styl
@@ -1,5 +1,58 @@
 @import nib
 
+// Okay so it's not REALLY a definition list, but hey
+ul.horizontal-description-list
+    
+    .span4:nth-child(3n+4)
+        margin-left 0
+
+    &, li
+        margin 0
+        padding 0
+        list-style none
+    
+    li
+        position relative
+        overflow hidden
+        height 56px
+        margin-bottom 20px
+
+        &, div
+            border-radius 4px
+
+        div
+            position absolute
+            top 0
+            left 0
+            width 100%
+            height 56px
+
+        &:hover
+            overflow visible
+            z-index 500
+            
+            div
+                background #e9e9e9
+                height auto
+                box-shadow 0 0 20px #fff
+
+                p
+                    height auto
+                    overflow visible
+                    word-break break-all
+                    white-space normal
+        
+        div
+            background #f1f1f1
+            padding 10px
+
+        p
+            margin-bottom 0
+            height 1.3em
+            white-space nowrap
+            text-overflow ellipsis
+            overflow hidden
+
 dl
     clearfix()
     margin 0 0 1.5em
