New file browser

--- a/SingularityUI/app/views/templates/taskBase.hbs
+++ b/SingularityUI/app/views/templates/taskBase.hbs
@@ -14,6 +14,11 @@
         </section>
     </div>
 
+    <section data-file-browser>
+        
+    </section>
+
+
     <div class='task-info-container'>
         
     </div>
