--- a/SingularityUI/app/styles/definitionList.styl
+++ b/SingularityUI/app/styles/definitionList.styl
@@ -32,19 +32,27 @@ ul.horizontal-description-list
             z-index 500
             
             div
-                background #e9e9e9
                 height auto
-                box-shadow 0 0 20px #fff
+                box-shadow 0 0 0 5px rgba(255, 255, 255, .9)
 
                 p
                     height auto
                     overflow visible
                     word-break break-all
-                    white-space normal
+                    white-space pre-wrap
         
         div
             background #f1f1f1
             padding 10px
+
+        h4 a
+            float right
+            font-weight 400
+            font-size 12px
+            margin-top -5px
+
+            &:hover
+                text-decoration none
 
         p
             margin-bottom 0
