Task view template cleanup

--- a/SingularityUI/app/views/templates/taskBase.hbs
+++ b/SingularityUI/app/views/templates/taskBase.hbs
@@ -8,15 +8,13 @@
         
     </div>
 
-    <div class='task-s3-logs-container'>
-        <section data-s3-logs>
-            {{! Filled in by subview }}
-        </section>
+    <div class="task-file-browser-container">
+        {{! Filled in by subview }}
     </div>
 
-    <section data-file-browser>
-        
-    </section>
+    <div class='task-s3-logs-container'>
+        {{! Filled in by subview }}
+    </div>
 
 
     <div class='task-info-container'>
