Added stderr & stdout labels to service.log

--- a/SingularityUI/app/views/templates/taskFileBrowser.hbs
+++ b/SingularityUI/app/views/templates/taskFileBrowser.hbs
@@ -32,6 +32,10 @@
                                     {{else}}
                                         <a href="{{#appRoot}}{{/appRoot}}/task/{{ taskId }}/tail/{{ requestPath }}">
                                             <span class="icon icon-file"></span>{{ shortPath }}
+                                            {{#ifEqual shortPath 'service.log'}}
+                                                <span class="label label-info">stdout</span>
+                                                <span class="label label-info">stderr</span>
+                                            {{/ifEqual}}
                                         </a>
                                     {{/if}}
                                 </td>
